[package]
name = "sparkle"
license = "MIT / Apache-2.0"
version = "0.1.8"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
description = "GL bindings for Servo's WebGL implementation."
repository = "https://github.com/servo/sparkle"
edition = "2018"
build = "build.rs"

[build-dependencies]
gl_generator = "0.13"

[dependencies]
